--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: person("Jessica Mazen", email = "jm5ku@virginia.edu", role = c("aut",
 Description: Things related to multi-level models.
 Depends: R (>= 3.2.0)
 Imports: lme4,stats,ggplot2
-License: GPL-3
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
