--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(betweenPlot)
 export(caterpillarPlot)
 export(center)
 export(levelCompare)
+export(levelComparePlot)
+export(mlm_assumptions)
 export(rsqmlm)
 export(varCompare)
 export(withinPlot)
