--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 S3method(print,ICCm)
 S3method(print,center)
+S3method(print,levelCompare)
 S3method(print,rsqmlm)
 S3method(print,varCompare)
 export(ICCm)
 export(betweenPlot)
 export(caterpillarPlot)
 export(center)
+export(levelCompare)
 export(mlm_assumptions)
 export(rsqmlm)
 export(varCompare)
