--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(betweenPlot)
 export(caterpillarPlot)
 export(center)
 export(levelCompare)
+export(levelComparePlot)
 export(mlm_assumptions)
 export(rsqmlm)
 export(varCompare)
